devops/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
spec:
  serviceName: mssql
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: krisyslimited/sex:latest
        ports:
        - containerPort: 1433
          name: tcpsql
        volumeMounts:
        - name: mssql-data
          mountPath: "/var/opt/mssql"
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: mssql-claim
      imagePullSecrets:
      - name: docker-hub-cred
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-shillings
spec:
  type: ClusterIP
  selector:
    statefulset.kubernetes.io/pod-name: mssql-shillings
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1411
      name: tcpsql
