devops/harpoon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shillings-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - api.shillings.info
    secretName: shillings-tls
  rules:
    - host: api.shillings.info
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: harpoon-service
                port: 
                  number: 5000
