devops/shillings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shillings-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: shillings.info
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: shillings-service
                port: 
                  number: 80
